force-app/main/default/objects/PreviousContract__c/PreviousContract__c.object-meta.xml
<CustomObject>
    <label>Previous Contract</label>
    <nameField>
        <displayFormat>PreviousContract-{0000}</displayFormat>
        <label>Previous Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Previous Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>