force-app/main/default/objects/PreviousContract__c/fields/IsConcernedByCancelReplace__c.field-meta.xml
<CustomField>
    <fullName>IsConcernedByCancelReplace__c</fullName>
    <label>Is concerned by Cancel &amp; Replace</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>