force-app/main/default/objects/PreviousContract__c/fields/TerminationType__c.field-meta.xml
<CustomField>
    <fullName>TerminationType__c</fullName>
    <label>Termination Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renewal earlier start date</fullName>
            </value>
            <value>
                <fullName>Contracts merge</fullName>
            </value>
            <value>
                <fullName>Renegotiation Opt-in</fullName>
            </value>
            <value>
                <fullName>Product swap (no usage)</fullName>
            </value>
            <value>
                <fullName>Price adjustment (commercial gesture)</fullName>
            </value>
            <value>
                <fullName>Booking adjustment product not working</fullName>
            </value>
            <value>
                <fullName>Booking adjustment</fullName>
            </value>
            <value>
                <fullName>Postponed start date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>