force-app/main/default/objects/PreviousContract__c/validationRules/PreventConcurrentRipAndCancel.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventConcurrentRipAndCancel</fullName>
    <active>true</active>
    <description>For Renewal Opportunity both Is concerned by Rip &amp; Replace and Is concerned by Cancel &amp; Replace can’t be set at the same time.</description>
    <errorConditionFormula>AND( NOT($Permission.ByPassVR),
ISPICKVAL( Opportunity__r.Type ,&apos;Renewal&apos;),
ISPICKVAL( IsConcernedByCancelReplace__c  ,&apos;Yes&apos;),
ISPICKVAL( IsConcernedByRipReplace__c ,&apos;Yes&apos;)
)</errorConditionFormula>
    <errorMessage>For Renewal Opportunity both Is concerned by Rip &amp; Replace and Is concerned by Cancel &amp; Replace can’t be set at the same time.</errorMessage>
</ValidationRule>